# CollatChain

./: README.md
CollatChain/: Cargo.toml
CollatChain/contracts/vault_manager/: Cargo.toml
CollatChain/contracts/vault_manager/src/: lib.rs  test.rs
CollatChain/contracts/vault_manager/test_snapshots/test/: test_borrow_insufficient_collateral.1.json  test_borrow_success.1.json  test_deposit_collateral.1.json  test_init_vault.1.json  test_liquidate_no_debt.1.json  test_liquidate_not_undercollateralized.1.json  test_liquidate_success.1.json  test_repay_full_and_excess.1.json  test_repay_success.1.json  test_repay_without_debt.1.json  test_withdraw_full.1.json  test_withdraw_success.1.json  test_withdraw_too_much.1.json
CollatChain/frontend/: package-lock.json  package.json
CollatChain/frontend/src/: stellar-wallets-kit.ts
CollatChain/frontend/src/app/: CDEAM6F7UOL6DK3PGGZI4HC4RODPY5ZGBXGSIM7X  layout.tsx  page.tsx
CollatChain/frontend/src/hooks/: useVaultManager.tsx
