[package]
name = "vault_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "20.5.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }

[features]
testutils = []

[profile.dev]
panic = "unwind"

[profile.test]
panic = "unwind"
