[package]
name = "vault_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
[features]
testutils = []

[dependencies]
soroban-sdk = { version = "22.0.8", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "22.0.8", default-features = false, features = [
	"testutils",
] }
proptest = "1.4"
arbitrary = { version = "1.3", default-features = false }


[profile.dev]
panic = "unwind"

[profile.test]
panic = "unwind"
